<resources>
    <string name="app_name">Цифровая панель</string>

    <string name="dummy_button">Пуск!</string>
    <string name="dummy_content">8</string>
    <string name="cancel">Отмена</string>
    <string name="greeting">Выберите цвет</string>
    <string name="info">Программа создана при поддержке \n
        МСОО \"ОБЪЕДИНЕНИЕ ВЕТЕРАНОВ КОНЬКОБЕЖНОГО СПОРТА\"</string>
    <string name="black_btn">Черный</string>
    <string name="green_btn">Зеленый</string>
    <string name="red_btn">Красный</string>
    <string name="inverse_btn">Инверсный</string>
    <string name="info_title">Справка</string>
    <string name="blue_btn">Синий</string>
    <string name="yellow_btn">Желтый</string>
</resources>
